@@ -37,6 +37,9 @@ Tactics
 - Added tactics reset ltac profile, show ltac profile (and variants)
 - Added tactics restart_timer, finish_timing, and time_constr as an
   experimental way of timing Ltac's evaluation phase
+- Added tactic optimize_heap, analogous to the Vernacular Optimize
+  Heap, which performs a major garbage collection and heap compaction
+  in the OCaml run-time system.
 
 Vernacular Commands
 
